# AutoNav

./: .gitignore  README.md
launch/: launch.py
src/auto_nav/: CMakeLists.txt  package.xml
src/auto_nav/src/: Auto.cpp  Auto.h
src/auto_nav_interfaces/: CMakeLists.txt  package.xml
src/auto_nav_interfaces/action/: MakePlan.action
src/auto_nav_interfaces/include/auto_nav_interfaces/: Types.h  Types.hpp
src/auto_nav_interfaces/msg/: GeoLoc.msg  Instruction.msg  Plan.msg  State.msg  Target.msg
src/auto_nav_msgs/: CMakeLists.txt  package.xml
src/auto_nav_msgs/msg/: Plan.msg  State.msg  Target.msg  TargetType.msg
src/pathfinder/: CMakeLists.txt  package.xml
src/pathfinder/src/: Main.cpp  Search.cpp  Search.h  Site.cpp  Site.h  SiteLoader.cpp  SiteLoader.h  astar.h  main.cpp  pathfinder.cpp  pathfinder.hpp  search.cpp  search.hpp  search_node.hpp  site.cpp  site.hpp  site_loader.cpp  site_loader.hpp
src/pathfinder/src/debug/: DebugKML.cpp  DebugKML.h  debug_kml.cpp  debug_kml.hpp
src/pathfinding/: Auto.h  Main.cpp
src/pathfinding_msgs/msg/: Instruction.msg
static/: kml_debug_template.txt  slope_binary_filled.tga  urc_bounds.txt
